[ YC-5 ] Tidy up build/setup process